--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,33 @@
     height: 400px;
     box-shadow: inset 0 0 10px lightblue;
   }
+
+  .search-bar-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    padding-top: 20px;
+    justify-content: center;
+  }
+
+  .search-bar-input {
+    padding: 10px;
+    /* margin: 20px; */
+    margin-left: 16px;
+    width: 70%;
+    font-size: 1.2rem;
+  }
+
+  .searhbar-back-btn {
+    height: 50px;
+    width: 10%;
+    margin-left: 12px;
+  }
+/* 
+  .scrollable-name {
+    white-space: nowrap;         
+    overflow-x: auto;          
+    width: 100%;                 
+    max-width: 100%;           
+    display: block;             
+  } */
