--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --background-color: #171717;
   --text-color: #FFFFFF;
   --font-family: 'Titillium Web', sans-serif;
+  --font-weight:400;
 }
 
 body {
@@ -10,4 +11,5 @@ body {
   font-family: var(--font-family);
   margin: 0;
   overflow-x: hidden; /* Prevent horizontal scrolling */
+  font-weight: var(--font-weight);
 }
