--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,13 @@
 
   .search-bar-input {
     padding: 10px;
-    /* margin: 20px; */
     margin-left: 16px;
     width: 70%;
     font-size: 1.2rem;
+    background-color: var(--background-color);
+    font-family: var(--font-family);
+    font-weight: var(--font-weight);
+    color: var(--text-color);
   }
 
   .searhbar-back-btn {
@@ -31,11 +34,31 @@
     width: 10%;
     margin-left: 12px;
   }
-/* 
+
   .scrollable-name {
-    white-space: nowrap;         
-    overflow-x: auto;          
-    width: 100%;                 
-    max-width: 100%;           
-    display: block;             
-  } */
+    font-size: 0.9rem;
+    margin-top: 8px;
+    font-family: var(--font-family);
+    font-weight: var(--font-weight);
+    color: var(--text-color);
+  }
+
+  .grid-style {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding: 20px;
+  }
+
+  .thumbnailStyle {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .imageStyle {
+    width: 100%;
+    aspect-ratio: 2/3;
+    object-fit: cover;
+    border-radius: 8px;
+  }
