fix: final commit- added nav bar img

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
     align-content: center;
     padding-top: 20px;
     justify-content: center;
+    position: fixed;
+    top: 0; 
+    width: 100%; 
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
 
   .search-bar-input {
@@ -61,4 +66,20 @@
     aspect-ratio: 2/3;
     object-fit: cover;
     border-radius: 8px;
+  }
+
+  .main-grid {
+    margin-top: calc(80px); 
+  }
+  
+  .navbar {
+    background-image: url('./assets/nav_bar.png'); 
+    background-size: cover;
+    background-position: center center;
+    height: 100px;
+    position: fixed;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    z-index: 1000;
   }
