--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     width: 250px;
     margin: 10px;
     height: 400px;
+    padding: 24px;
     box-shadow: inset 0 0 10px lightblue;
   }
 
@@ -82,4 +83,12 @@
     left: 0;
     width: 100%;
     z-index: 1000;
+  }
+
+  .search-icon {
+    height: 30px;
+    width: 30px;
+    position: relative;
+    right: 50px;
+    top: 10px;
   }
