--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .shimmer-ui-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
   }
   
   .shimmer-ui-card {
@@ -9,6 +10,9 @@
     height: 400px;
     padding: 24px;
     box-shadow: inset 0 0 10px lightblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .search-bar-wrapper {
@@ -76,7 +80,7 @@
   }
 
   .main-grid {
-    margin-top: calc(80px); 
+    margin-top: calc(90px); 
   }
   
   .navbar {
