--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
     flex-wrap: wrap;
     align-content: center;
     padding-top: 20px;
-    justify-content: center;
+    justify-content: space-between;
     position: fixed;
     top: 0; 
     width: 100%; 
@@ -30,8 +30,7 @@
 
   .search-bar-input {
     padding: 10px;
-    margin-left: 16px;
-    width: 68%;
+    width: 100%;
     font-size: 1.2rem;
     background-color: var(--background-color);
     font-family: var(--font-family);
@@ -45,9 +44,10 @@
   }
 
   .searhbar-back-btn {
-    height: 50px;
+    height: 30px;
     width: 10%;
     margin-left: 8px;
+    margin-right: 8px;
   }
 
   .scrollable-name {
@@ -98,7 +98,21 @@
   .search-icon {
     height: 30px;
     width: 30px;
-    position: relative;
     right: 50px;
     top: 10px;
+    margin-right: 12px;
+    margin-left: 8px;
+  }
+
+  .genre-title-wrapper {
+    display: flex;
+    align-items:center;
+    width: 50%;
+  }
+
+  .searchbar-wrapper {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: flex-end;
   }
